[package]
name = "r411"
version = "0.0.0"
authors = ["BlackYoup"]

[dependencies]
hyper = "0.10"
hyper-native-tls = "0.2"
rocket = "0.2"
rocket_codegen = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.5", features = ["v4"] }

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["handlebars_templates"]
